--- a/showcase/platforms/android/res/xml/config.xml
+++ b/showcase/platforms/android/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.googlecode.gwtphonegap.showcase" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="com.googlecode.gwtphonegap.showcase" version="3.4.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
     <feature name="Whitelist">
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
@@ -58,13 +58,20 @@
     <feature name="Vibration">
         <param name="android-package" value="org.apache.cordova.vibration.Vibration" />
     </feature>
-    <allow-intent href="market:*" />
-    <name>GWT-Phonegap</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <feature name="StatusBar">
+        <param name="android-package" value="org.apache.cordova.statusbar.StatusBar" />
+        <param name="onload" value="true" />
+    </feature>
+    <allow-intent href="market:*" />
+    <name>GWT-Phonegap</name>
+    <description>
+        Showcase app demonstrates the functions of GWT-PhoneGap.
+    </description>
+    <author email="kurka.daniel@gmail.com" href="https://github.com/dankurka">
+        Daniel Kurka
     </author>
     <content src="index.html" />
     <access origin="*" />
